Final Tugas Week 11
Task Mesin Translasi Selesai

--- a/Week 11 Mesin Translasi/Mesin Translasi.ipynb
+++ b/Week 11 Mesin Translasi/Mesin Translasi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "4            umah iku duwur pisan           rumah itu tinggi sekali"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +101,16 @@
     "for i in range(len(corpus)):\n",
     "    cirebon = str(corpus.iloc[i,0]).lower().split()\n",
     "    indonesia = str(corpus.iloc[i,1]).lower().split()\n",
-    "    align = [( 0 , 0 ) , ( 1 , 1 ) , ( 2 , 2 ) , ( 3 , 3 ) , ( 4 , 4 ) , ( 5 , 5 ), ( 6 , 6 )]\n",
-    "    align = align[:len(cirebon)]\n",
+    "    align = []\n",
+    "    #     Align didapat dari banyaknya kata\n",
+    "    for i in range(len(cirebon)):\n",
+    "        align.append((i,i))\n",
     "    bitext.append(AlignedSent(indonesia ,cirebon, Alignment(align)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,45 +119,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.467\n",
-      "0.981\n",
+      "0.47\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(com_ibm1.translation_table[\"api\"][\"geni\"], 2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(com_ibm1.translation_table[\"saya\"][\"isun\"], 2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0.74\n"
      ]
     }
    ],
    "source": [
-    "print(round(com_ibm1.translation_table[\"api\"][\"geni\"], 3) )\n",
-    "print(round(com_ibm1.translation_table[\"saya\"][\"isun\"], 3) )\n",
-    "print(round(com_ibm1.translation_table[\"tidur\"][\"turu\"], 3) )"
+    "print(round(com_ibm1.translation_table[\"tidur\"][\"turu\"], 2) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.981\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(6, 6)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# counterCrb = 0\n",
+    "# counterInd = 0\n",
+    "# for i in range(len(corpus)):\n",
+    "#     crb = str(corpus.iloc[i,0]).lower().split()\n",
+    "#     ind = str(corpus.iloc[i,1]).lower().split()\n",
+    "#     counterCrb += len([w for w in crb if w == \"isun\"])\n",
+    "#     counterInd += len([w for w in ind if w == \"saya\"])\n",
+    "# counterCrb, counterInd\n",
+    "# Pencarian data suatu kata didalam corpus"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
