--- a/Week 11 Mesin Translasi/Mesin Translasi.ipynb
+++ b/Week 11 Mesin Translasi/Mesin Translasi.ipynb
@@ -105,12 +105,14 @@
     "    #     Align didapat dari banyaknya kata\n",
     "    for i in range(len(cirebon)):\n",
     "        align.append((i,i))\n",
+    "    # Inisiasi align menggunakan for loop dikarenakan pada Bahasa Cirebon hampir semua kata dan kalimatnya tidak adanya perubahan urutan.\n",
+    "    # Dan karena itu saya menggunakan for loop untuk parameter align\n",
     "    bitext.append(AlignedSent(indonesia ,cirebon, Alignment(align)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,20 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6, 6)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# counterCrb = 0\n",
     "# counterInd = 0\n",
@@ -198,20 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
